ABC/src/main/java/org/abc/typecheck/ABCParser.java
// $ANTLR 3.5.1 C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g 2015-09-28 22:35:14
package org.abc.typecheck;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("all")
public class ABCParser extends Parser {
    public static final String[] tokenNames = new String[] { "<invalid>",
            "<EOR>", "<DOWN>", "<UP>", "ARRAYLENGTH_REFERENCE", "ARRAY_ASSIGN",
            "ARRAY_READ", "ARRAY_TYPE", "ASSIGN", "BT", "CLASS", "CONST",
            "DigitUS", "ELSE", "EXPR_LIST", "FALSE", "FILE", "IDENTIFIER",
            "IF", "INTARRAY_NEW", "INTEGER", "LINE_COMMENT", "LOGIC_AND",
            "LOGIC_OR", "LT", "Letter", "MAIN_CLASS", "MAIN_METHOD",
            "METHOD_BODY", "METHOD_CALL", "METHOD_DECL", "METHOD_LIST",
            "MINUS", "MULT", "NEW", "PARAM", "PARAM_LIST", "PLUS", "RETURN",
            "STMNT_LIST", "STRING", "SUFFIX_PART", "SYSOUT", "THIS", "TRUE",
            "TYPE_REF", "UNARY_NOT", "VAR_DECL", "VAR_LIST", "VAR_REF",
            "WHILE", "WS", "'('", "')'", "','", "'.'", "';'", "'='", "'Tekst'",
            "'['", "']'", "'asgje'", "'bul'", "'gjatesi'", "'iri'",
            "'kryesore'", "'kthe'", "'numer'", "'publike'", "'statike'", "'{'",
            "'}'" };

    public static final int EOF = -1;

    public static final int T__52 = 52;

    public static final int T__53 = 53;

    public static final int T__54 = 54;

    public static final int T__55 = 55;

    public static final int T__56 = 56;

    public static final int T__57 = 57;

    public static final int T__58 = 58;

    public static final int T__59 = 59;

    public static final int T__60 = 60;

    public static final int T__61 = 61;

    public static final int T__62 = 62;

    public static final int T__63 = 63;

    public static final int T__64 = 64;

    public static final int T__65 = 65;

    public static final int T__66 = 66;

    public static final int T__67 = 67;

    public static final int T__68 = 68;

    public static final int T__69 = 69;

    public static final int T__70 = 70;

    public static final int T__71 = 71;

    public static final int ARRAYLENGTH_REFERENCE = 4;

    public static final int ARRAY_ASSIGN = 5;

    public static final int ARRAY_READ = 6;

    public static final int ARRAY_TYPE = 7;

    public static final int ASSIGN = 8;

    public static final int BT = 9;

    public static final int CLASS = 10;

    public static final int CONST = 11;

    public static final int DigitUS = 12;

    public static final int ELSE = 13;

    public static final int EXPR_LIST = 14;

    public static final int FALSE = 15;

    public static final int FILE = 16;

    public static final int IDENTIFIER = 17;

    public static final int IF = 18;

    public static final int INTARRAY_NEW = 19;

    public static final int INTEGER = 20;

    public static final int LINE_COMMENT = 21;

    public static final int LOGIC_AND = 22;

    public static final int LOGIC_OR = 23;

    public static final int LT = 24;

    public static final int Letter = 25;

    public static final int MAIN_CLASS = 26;

    public static final int MAIN_METHOD = 27;

    public static final int METHOD_BODY = 28;

    public static final int METHOD_CALL = 29;

    public static final int METHOD_DECL = 30;

    public static final int METHOD_LIST = 31;

    public static final int MINUS = 32;

    public static final int MULT = 33;

    public static final int NEW = 34;

    public static final int PARAM = 35;

    public static final int PARAM_LIST = 36;

    public static final int PLUS = 37;

    public static final int RETURN = 38;

    public static final int STMNT_LIST = 39;

    public static final int STRING = 40;

    public static final int SUFFIX_PART = 41;

    public static final int SYSOUT = 42;

    public static final int THIS = 43;

    public static final int TRUE = 44;

    public static final int TYPE_REF = 45;

    public static final int UNARY_NOT = 46;

    public static final int VAR_DECL = 47;

    public static final int VAR_LIST = 48;

    public static final int VAR_REF = 49;

    public static final int WHILE = 50;

    public static final int WS = 51;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    public ABCParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public ABCParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    @Override
    public String[] getTokenNames() {
        return ABCParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g";
    }

    public static class goal_return extends ParserRuleReturnScope {
        CommonTree tree;

        @Override
        public CommonTree getTree() {
            return tree;
        }
    };

    // $ANTLR start "goal"
    // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION
    // 1\\PA1\\ANTLRStarterKit\\ABC.g:82:1: goal : mainClass ( classDeclaration
    // )* -> ^( FILE mainClass ( classDeclaration )* ) ;
    public final ABCParser.goal_return goal() throws RecognitionException {
        ABCParser.goal_return retval = new ABCParser.goal_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        ParserRuleReturnScope mainClass1 = null;
        ParserRuleReturnScope classDeclaration2 = null;

        RewriteRuleSubtreeStream stream_mainClass = new RewriteRuleSubtreeStream(
                adaptor, "rule mainClass");
        RewriteRuleSubtreeStream stream_classDeclaration = new RewriteRuleSubtreeStream(
                adaptor, "rule classDeclaration");

        try {
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:82:6: ( mainClass (
            // classDeclaration )* -> ^( FILE mainClass ( classDeclaration )* )
            // )
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:82:8: mainClass (
            // classDeclaration )*
            {
                pushFollow(FOLLOW_mainClass_in_goal330);
                mainClass1 = mainClass();
                state._fsp--;

                stream_mainClass.add(mainClass1.getTree());
                // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
                // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:82:18: (
                // classDeclaration )*
                loop1: while (true) {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);
                    if ((LA1_0 == CLASS)) {
                        alt1 = 1;
                    }

                    switch (alt1) {
                    case 1:
                    // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                    // Technology\\COMPILER CONSTRUCTION
                    // 1\\PA1\\ANTLRStarterKit\\ABC.g:82:19: classDeclaration
                    {
                        pushFollow(FOLLOW_classDeclaration_in_goal333);
                        classDeclaration2 = classDeclaration();
                        state._fsp--;

                        stream_classDeclaration.add(classDeclaration2.getTree());
                    }
                        break;

                    default:
                        break loop1;
                    }
                }

                // AST REWRITE
                // elements: mainClass, classDeclaration
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(
                        adaptor, "rule retval",
                        retval != null ? retval.getTree() : null);

                root_0 = (CommonTree) adaptor.nil();
                // 82:38: -> ^( FILE mainClass ( classDeclaration )* )
                {
                    // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                    // Technology\\COMPILER CONSTRUCTION
                    // 1\\PA1\\ANTLRStarterKit\\ABC.g:82:41: ^( FILE mainClass (
                    // classDeclaration )* )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot(
                                (CommonTree) adaptor.create(FILE, "FILE"),
                                root_1);
                        adaptor.addChild(root_1, stream_mainClass.nextTree());
                        // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                        // Technology\\COMPILER CONSTRUCTION
                        // 1\\PA1\\ANTLRStarterKit\\ABC.g:82:58: (
                        // classDeclaration )*
                        while (stream_classDeclaration.hasNext()) {
                            adaptor.addChild(root_1,
                                    stream_classDeclaration.nextTree());
                        }
                        stream_classDeclaration.reset();

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start,
                    input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR end "goal"

    public static class mainClass_return extends ParserRuleReturnScope {
        CommonTree tree;

        @Override
        public CommonTree getTree() {
            return tree;
        }
    };

    // $ANTLR start "mainClass"
    // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION
    // 1\\PA1\\ANTLRStarterKit\\ABC.g:84:1: mainClass : CLASS identifier '{'
    // 'publike' 'statike' 'asgje' 'kryesore' '(' 'Tekst' '[' ']' identifier ')'
    // '{' statement '}' '}' -> ^( MAIN_CLASS identifier ^( MAIN_METHOD ^(
    // PARAM_LIST ) statement ) ) ;
    public final ABCParser.mainClass_return mainClass()
            throws RecognitionException {
        ABCParser.mainClass_return retval = new ABCParser.mainClass_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token CLASS3 = null;
        Token char_literal5 = null;
        Token string_literal6 = null;
        Token string_literal7 = null;
        Token string_literal8 = null;
        Token string_literal9 = null;
        Token char_literal10 = null;
        Token string_literal11 = null;
        Token char_literal12 = null;
        Token char_literal13 = null;
        Token char_literal15 = null;
        Token char_literal16 = null;
        Token char_literal18 = null;
        Token char_literal19 = null;
        ParserRuleReturnScope identifier4 = null;
        ParserRuleReturnScope identifier14 = null;
        ParserRuleReturnScope statement17 = null;

        CommonTree CLASS3_tree = null;
        CommonTree char_literal5_tree = null;
        CommonTree string_literal6_tree = null;
        CommonTree string_literal7_tree = null;
        CommonTree string_literal8_tree = null;
        CommonTree string_literal9_tree = null;
        CommonTree char_literal10_tree = null;
        CommonTree string_literal11_tree = null;
        CommonTree char_literal12_tree = null;
        CommonTree char_literal13_tree = null;
        CommonTree char_literal15_tree = null;
        CommonTree char_literal16_tree = null;
        CommonTree char_literal18_tree = null;
        CommonTree char_literal19_tree = null;
        RewriteRuleTokenStream stream_68 = new RewriteRuleTokenStream(adaptor,
                "token 68");
        RewriteRuleTokenStream stream_58 = new RewriteRuleTokenStream(adaptor,
                "token 58");
        RewriteRuleTokenStream stream_69 = new RewriteRuleTokenStream(adaptor,
                "token 69");
        RewriteRuleTokenStream stream_59 = new RewriteRuleTokenStream(adaptor,
                "token 59");
        RewriteRuleTokenStream stream_70 = new RewriteRuleTokenStream(adaptor,
                "token 70");
        RewriteRuleTokenStream stream_60 = new RewriteRuleTokenStream(adaptor,
                "token 60");
        RewriteRuleTokenStream stream_71 = new RewriteRuleTokenStream(adaptor,
                "token 71");
        RewriteRuleTokenStream stream_61 = new RewriteRuleTokenStream(adaptor,
                "token 61");
        RewriteRuleTokenStream stream_CLASS = new RewriteRuleTokenStream(
                adaptor, "token CLASS");
        RewriteRuleTokenStream stream_52 = new RewriteRuleTokenStream(adaptor,
                "token 52");
        RewriteRuleTokenStream stream_53 = new RewriteRuleTokenStream(adaptor,
                "token 53");
        RewriteRuleTokenStream stream_65 = new RewriteRuleTokenStream(adaptor,
                "token 65");
        RewriteRuleSubtreeStream stream_identifier = new RewriteRuleSubtreeStream(
                adaptor, "rule identifier");
        RewriteRuleSubtreeStream stream_statement = new RewriteRuleSubtreeStream(
                adaptor, "rule statement");

        try {
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:85:2: ( CLASS
            // identifier '{' 'publike' 'statike' 'asgje' 'kryesore' '(' 'Tekst'
            // '[' ']' identifier ')' '{' statement '}' '}' -> ^( MAIN_CLASS
            // identifier ^( MAIN_METHOD ^( PARAM_LIST ) statement ) ) )
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:85:4: CLASS
            // identifier '{' 'publike' 'statike' 'asgje' 'kryesore' '(' 'Tekst'
            // '[' ']' identifier ')' '{' statement '}' '}'
            {
                CLASS3 = (Token) match(input, CLASS,
                        FOLLOW_CLASS_in_mainClass356);
                stream_CLASS.add(CLASS3);

                pushFollow(FOLLOW_identifier_in_mainClass358);
                identifier4 = identifier();
                state._fsp--;

                stream_identifier.add(identifier4.getTree());
                char_literal5 = (Token) match(input, 70,
                        FOLLOW_70_in_mainClass360);
                stream_70.add(char_literal5);

                string_literal6 = (Token) match(input, 68,
                        FOLLOW_68_in_mainClass362);
                stream_68.add(string_literal6);

                string_literal7 = (Token) match(input, 69,
                        FOLLOW_69_in_mainClass364);
                stream_69.add(string_literal7);

                string_literal8 = (Token) match(input, 61,
                        FOLLOW_61_in_mainClass366);
                stream_61.add(string_literal8);

                string_literal9 = (Token) match(input, 65,
                        FOLLOW_65_in_mainClass368);
                stream_65.add(string_literal9);

                char_literal10 = (Token) match(input, 52,
                        FOLLOW_52_in_mainClass370);
                stream_52.add(char_literal10);

                string_literal11 = (Token) match(input, 58,
                        FOLLOW_58_in_mainClass372);
                stream_58.add(string_literal11);

                char_literal12 = (Token) match(input, 59,
                        FOLLOW_59_in_mainClass376);
                stream_59.add(char_literal12);

                char_literal13 = (Token) match(input, 60,
                        FOLLOW_60_in_mainClass378);
                stream_60.add(char_literal13);

                pushFollow(FOLLOW_identifier_in_mainClass380);
                identifier14 = identifier();
                state._fsp--;

                stream_identifier.add(identifier14.getTree());
                char_literal15 = (Token) match(input, 53,
                        FOLLOW_53_in_mainClass382);
                stream_53.add(char_literal15);

                char_literal16 = (Token) match(input, 70,
                        FOLLOW_70_in_mainClass384);
                stream_70.add(char_literal16);

                pushFollow(FOLLOW_statement_in_mainClass386);
                statement17 = statement();
                state._fsp--;

                stream_statement.add(statement17.getTree());
                char_literal18 = (Token) match(input, 71,
                        FOLLOW_71_in_mainClass388);
                stream_71.add(char_literal18);

                char_literal19 = (Token) match(input, 71,
                        FOLLOW_71_in_mainClass390);
                stream_71.add(char_literal19);

                // AST REWRITE
                // elements: statement, identifier
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(
                        adaptor, "rule retval",
                        retval != null ? retval.getTree() : null);

                root_0 = (CommonTree) adaptor.nil();
                // 87:3: -> ^( MAIN_CLASS identifier ^( MAIN_METHOD ^(
                // PARAM_LIST ) statement ) )
                {
                    // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                    // Technology\\COMPILER CONSTRUCTION
                    // 1\\PA1\\ANTLRStarterKit\\ABC.g:87:6: ^( MAIN_CLASS
                    // identifier ^( MAIN_METHOD ^( PARAM_LIST ) statement ) )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot(
                                (CommonTree) adaptor.create(MAIN_CLASS,
                                        "MAIN_CLASS"), root_1);
                        adaptor.addChild(root_1, stream_identifier.nextTree());
                        // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                        // Technology\\COMPILER CONSTRUCTION
                        // 1\\PA1\\ANTLRStarterKit\\ABC.g:87:30: ^( MAIN_METHOD
                        // ^( PARAM_LIST ) statement )
                        {
                            CommonTree root_2 = (CommonTree) adaptor.nil();
                            root_2 = (CommonTree) adaptor.becomeRoot(
                                    (CommonTree) adaptor.create(MAIN_METHOD,
                                            "MAIN_METHOD"), root_2);
                            // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                            // Technology\\COMPILER CONSTRUCTION
                            // 1\\PA1\\ANTLRStarterKit\\ABC.g:87:44: ^(
                            // PARAM_LIST )
                            {
                                CommonTree root_3 = (CommonTree) adaptor.nil();
                                root_3 = (CommonTree) adaptor.becomeRoot(
                                        (CommonTree) adaptor.create(PARAM_LIST,
                                                "PARAM_LIST"), root_3);
                                adaptor.addChild(root_2, root_3);
                            }

                            adaptor.addChild(root_2,
                                    stream_statement.nextTree());
                            adaptor.addChild(root_1, root_2);
                        }

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start,
                    input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR end "mainClass"

    public static class classDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;

        @Override
        public CommonTree getTree() {
            return tree;
        }
    };

    // $ANTLR start "classDeclaration"
    // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION
    // 1\\PA1\\ANTLRStarterKit\\ABC.g:90:1: classDeclaration : CLASS identifier
    // '{' varDeclarationList methodDeclarationList '}' -> ^( CLASS identifier
    // varDeclarationList methodDeclarationList ) ;
    public final ABCParser.classDeclaration_return classDeclaration()
            throws RecognitionException {
        ABCParser.classDeclaration_return retval = new ABCParser.classDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token CLASS20 = null;
        Token char_literal22 = null;
        Token char_literal25 = null;
        ParserRuleReturnScope identifier21 = null;
        ParserRuleReturnScope varDeclarationList23 = null;
        ParserRuleReturnScope methodDeclarationList24 = null;

        CommonTree CLASS20_tree = null;
        CommonTree char_literal22_tree = null;
        CommonTree char_literal25_tree = null;
        RewriteRuleTokenStream stream_70 = new RewriteRuleTokenStream(adaptor,
                "token 70");
        RewriteRuleTokenStream stream_71 = new RewriteRuleTokenStream(adaptor,
                "token 71");
        RewriteRuleTokenStream stream_CLASS = new RewriteRuleTokenStream(
                adaptor, "token CLASS");
        RewriteRuleSubtreeStream stream_methodDeclarationList = new RewriteRuleSubtreeStream(
                adaptor, "rule methodDeclarationList");
        RewriteRuleSubtreeStream stream_identifier = new RewriteRuleSubtreeStream(
                adaptor, "rule identifier");
        RewriteRuleSubtreeStream stream_varDeclarationList = new RewriteRuleSubtreeStream(
                adaptor, "rule varDeclarationList");

        try {
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:91:2: ( CLASS
            // identifier '{' varDeclarationList methodDeclarationList '}' -> ^(
            // CLASS identifier varDeclarationList methodDeclarationList ) )
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:91:4: CLASS
            // identifier '{' varDeclarationList methodDeclarationList '}'
            {
                CLASS20 = (Token) match(input, CLASS,
                        FOLLOW_CLASS_in_classDeclaration424);
                stream_CLASS.add(CLASS20);

                pushFollow(FOLLOW_identifier_in_classDeclaration426);
                identifier21 = identifier();
                state._fsp--;

                stream_identifier.add(identifier21.getTree());
                char_literal22 = (Token) match(input, 70,
                        FOLLOW_70_in_classDeclaration428);
                stream_70.add(char_literal22);

                pushFollow(FOLLOW_varDeclarationList_in_classDeclaration432);
                varDeclarationList23 = varDeclarationList();
                state._fsp--;

                stream_varDeclarationList.add(varDeclarationList23.getTree());
                pushFollow(FOLLOW_methodDeclarationList_in_classDeclaration434);
                methodDeclarationList24 = methodDeclarationList();
                state._fsp--;

                stream_methodDeclarationList.add(methodDeclarationList24.getTree());
                char_literal25 = (Token) match(input, 71,
                        FOLLOW_71_in_classDeclaration436);
                stream_71.add(char_literal25);

                // AST REWRITE
                // elements: identifier, varDeclarationList,
                // methodDeclarationList, CLASS
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(
                        adaptor, "rule retval",
                        retval != null ? retval.getTree() : null);

                root_0 = (CommonTree) adaptor.nil();
                // 93:3: -> ^( CLASS identifier varDeclarationList
                // methodDeclarationList )
                {
                    // C:\\Users\\user\\Desktop\\MSC SOFTWARE
                    // Technology\\COMPILER CONSTRUCTION
                    // 1\\PA1\\ANTLRStarterKit\\ABC.g:93:6: ^( CLASS identifier
                    // varDeclarationList methodDeclarationList )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot(
                                stream_CLASS.nextNode(), root_1);
                        adaptor.addChild(root_1, stream_identifier.nextTree());
                        adaptor.addChild(root_1,
                                stream_varDeclarationList.nextTree());
                        adaptor.addChild(root_1,
                                stream_methodDeclarationList.nextTree());
                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start,
                    input.LT(-1), re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR end "classDeclaration"

    public static class varDeclarationList_return extends ParserRuleReturnScope {
        CommonTree tree;

        @Override
        public CommonTree getTree() {
            return tree;
        }
    };

    // $ANTLR start "varDeclarationList"
    // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER CONSTRUCTION
    // 1\\PA1\\ANTLRStarterKit\\ABC.g:96:1: varDeclarationList : (
    // varDeclaration )* -> ^( VAR_LIST ( varDeclaration )* ) ;
    public final ABCParser.varDeclarationList_return varDeclarationList()
            throws RecognitionException {
        ABCParser.varDeclarationList_return retval = new ABCParser.varDeclarationList_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        ParserRuleReturnScope varDeclaration26 = null;

        RewriteRuleSubtreeStream stream_varDeclaration = new RewriteRuleSubtreeStream(
                adaptor, "rule varDeclaration");

        try {
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:97:2: ( (
            // varDeclaration )* -> ^( VAR_LIST ( varDeclaration )* ) )
            // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
            // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:97:4: (
            // varDeclaration )*
            {
                // C:\\Users\\user\\Desktop\\MSC SOFTWARE Technology\\COMPILER
                // CONSTRUCTION 1\\PA1\\ANTLRStarterKit\\ABC.g:97:4: (
                // varDeclaration )*
                loop2: while (true) {
                    int alt2 = 2;
                    int LA2_0 = input.LA(1);
                    if ((LA2_0 == IDENTIFIER)) {
                        int LA2_2 = input.LA(2);
                        if ((LA2_2 == IDENTIFIER)) {
                            alt2 = 1;
                        }

                    } else if ((LA2_0 == 58 || (LA2_0 >= 61 && LA2_0 <= 62) || LA2_0 == 67)) {
                        alt2 = 1;
                    }

